# Grbl2

./: .gitignore  .gitmodules  .pdm-python  CI-test.sh  CI-text.sh  Dockerfile  README.md  bot.py  bot_config.yaml  bot_init.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  docker-image.yml
modules/ACGimg/: ACGimg.py  get_acg_img.py
modules/AIDrawing/: AI_drawing.py  BanTags.txt  get_ai_drawing_img.py
modules/Admin/: get_ip.py  recall_message.py
modules/Bilibili/: get_video_ai_conclusion.py  get_video_info.py  video.py
modules/BreakTofu/: break_tofu.py  char2image.py  char2image2.py  guess_tofu.py  guess_tofu_core.py
modules/FakeAI/: AI.py
modules/GroupEventAction/: GroupNameChange.py  InfosChange.py  MemberJoinLeave.py
modules/SeTu/: SeTu.py  create_setu.py
modules/SearchThing/: search_char.py  web_search.py
modules/SixtySecNews/: SixtySecNews.py  get_60s_news.py  get_moyu_calendar.py
modules/Yiyan/: get_yiyan.py  yiyan.py
modules/base/: check.py  get_quote_message.py  get_quote_origin.py  message_queue.py  time2str.py
modules/scheduler/: new_year.py
modules/scheduler/TrimeNightlyUpload/: OutdatedAssetsException.py  get_trime_nightly.py  trime_nightly_upload.py
